crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__missing_rhs_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bin_op/missing_rhs_0.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..10,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 0..3,
                    value: BinOp(
                        ExprBinOp {
                            node_index: AtomicNodeIndex(..),
                            range: 0..3,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: AtomicNodeIndex(..),
                                    range: 0..1,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: AtomicNodeIndex(..),
                                    range: 3..3,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 5..10,
                    value: BinOp(
                        ExprBinOp {
                            node_index: AtomicNodeIndex(..),
                            range: 5..10,
                            left: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: AtomicNodeIndex(..),
                                    range: 5..6,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: AtomicNodeIndex(..),
                                    range: 9..10,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | 0 +
  |    ^ Syntax Error: Expected an expression
2 | 
3 | 1 + 2
  |
